tests/rosetta/transpiler/Scala/2048.error
exit status 1
/workspace/mochi/tests/rosetta/transpiler/Scala/2048.scala:150: error: type mismatch;
 found   : Any
 required: Int
      b(y)(x) = `new`.asInstanceOf[ArrayBuffer[Any]](x)
                                                    ^
/workspace/mochi/tests/rosetta/transpiler/Scala/2048.scala:213: error: type mismatch;
 found   : Any
 required: Int
      b(y)(x) = `new`.asInstanceOf[ArrayBuffer[Any]](y)
                                                    ^
/workspace/mochi/tests/rosetta/transpiler/Scala/2048.scala:328: error: value && is not a member of Any
        if ((full && !(hasMoves(board)).asInstanceOf[Boolean]).asInstanceOf[Boolean]) {
                  ^
three errors found
